--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "random-number": "0.0.9",
     "request": "^2.85.0",
     "serve-favicon": "^2.5.0"
   },
